--- a/source/DotNetAppSqlDb/DotNetAppSqlDb.csproj
+++ b/source/DotNetAppSqlDb/DotNetAppSqlDb.csproj
@@ -212,7 +212,10 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\NextWomen0.jpg" />
     <Content Include="Content\selfdefense.png" />
+    <Content Include="Content\StrongerTogether.jpg" />
+    <Content Include="Content\Women_workplace.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -276,6 +279,7 @@
     <Content Include="Views\Todos\SuccessStories.cshtml" />
     <Content Include="Views\Todos\SelfLearning.cshtml" />
     <Content Include="Views\Todos\JobOpportunities.cshtml" />
+    <Content Include="Views\Todos\AboutUs.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
