--- a/source/DotNetAppSqlDb/Web.config
+++ b/source/DotNetAppSqlDb/Web.config
@@ -14,7 +14,7 @@
     <add name="Secrets" userSecretsId="bbc157de-e5b2-436d-a62d-ff34cd23eb44" type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" /></builders>
   </configBuilders>
   <connectionStrings>
-    <add name="MyDbConnection" connectionString="(localdb)\MSSQLLocalDB; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MyDatabaseContext-12.mdf" providerName="System.Data.SqlClient" />
+    <add name="MyDbConnection" connectionString="Data Source=tcp:dotnetappsqldbdbserver-01.database.windows.net,1433;Initial Catalog=DotNetAppSqlDb_db01;User Id=YogitaTipnis@dotnetappsqldbdbserver-01;Password=Yogz1995" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
